--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,11 +3,7 @@
         <span class="w3-text-black ">Your Checklist</span>
     </div>
     <hr class="cookware-header-line">
-<<<<<<< HEAD
-    <div class="w3-center w3-text-balck " style="width: 100%;height:600px">
-=======
     <div class="w3-center w3-text-balck" style="width:100%;height:600px;">
->>>>>>> addb168342f58e30de663ad0bd3b87cc0fe6ff00
         <h4><b>It is Your Choice to Travel Smart...</b></h4>
 
     </div>
@@ -65,72 +61,6 @@
     <!-- Adding popup -->
     <h2>Cash On Delivery!!!</h2>
     <p>Wanna pay only after seeing the product? Check out our exclusive payment option</p>
-<<<<<<< HEAD
-
-    <!-- Button to Open the Modal -->
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal1">
-        What is COD??
-    </button>
-    <br />
-    <br />
-
-    <h2>Easy Refunds!!!</h2>
-
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-        Wanna get money back???
-    </button>
-
-    <!-- The Modal -->
-    <div class="modal fade" id="myModal1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-
-                <!-- Modal Header -->
-                <div class="modal-header">
-                    <h4 class="modal-title">Cash on Delivery </h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-
-                <!-- Modal body -->
-                <div class="modal-body">
-                    Cash on Delivery is a payment method where you dont need to pay anything before you actually see
-                    the products!!!
-                    You can pay the amount after wee deliver the product to you!!!
-                </div>
-
-                <!-- Modal footer -->
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <!-- The Modal -->
-    <div class="modal fade" id="myModal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-
-                <!-- Modal Header -->
-                <div class="modal-header">
-                    <h4 class="modal-title">Easy Refunds</h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-
-                <!-- Modal body -->
-                <div class="modal-body">
-                    You dont have to worry about returning at all!!
-                    you can have your money back rather than getting points for each retrun you make!!!
-
-                </div>
-
-                <!-- Modal footer -->
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                </div>
-
-            </div>
-=======
 
     <!-- Button to Open the Modal -->
     <button class="w3-button w3-blue w3-margin-bottom"
@@ -154,43 +84,19 @@
         <div class="w3-container" id="contact">
             <h2>Your Feedback is important to us</h2>
             <p>Questions? Go ahead, ask them:</p>
-            <form>
-                <p><input class="w3-round-xlarge w3-input w3-border custom-input" type="text" placeholder="Name"
+            <form [formGroup]="formdata" (ngSubmit)="onClickSubmit(formdata.value)">
+                <p><input formControlName="name" class="w3-round-xlarge w3-input w3-border custom-input" type="text" placeholder="Name"
                         required name="Name"></p>
-                <p><input class="w3-round-xlarge w3-input w3-border custom-input" type="text" placeholder="Email"
+                <p><input formControlName="femail" class="w3-round-xlarge w3-input w3-border custom-input" type="text" placeholder="Email"
                         required name="Email"></p>
-                <p><input class="w3-round-xlarge w3-input w3-border custom-input" type="text" placeholder="Message"
+                <p><input formControlName="message"class="w3-round-xlarge w3-input w3-border custom-input" type="text" placeholder="Message"
                         required name="Message"></p>
-                <button type="submit" class="w3-round-xlarge w3-button w3-green w3-third" onclick="feedback()">Send
-                    a Message</button>
-            </form>
->>>>>>> addb168342f58e30de663ad0bd3b87cc0fe6ff00
-        </div>
-        <br>
-    </div>
-<<<<<<< HEAD
-</div>
-<div class="w3-container">
-    <div class="w3-half w3-black w3-text-white">
-        <!-- Contact -->
-        <div class="w3-container" id="contact">
-            <h2>Your Feedback is important to us</h2>
-            <p>Questions? Go ahead, ask them:</p>
-            <form>
-                <p><input class="w3-round-xlarge w3-input w3-border custom-input" type="text" placeholder="Name"
-                        required name="Name"></p>
-                <p><input class="w3-round-xlarge w3-input w3-border custom-input" type="text" placeholder="Email"
-                        required name="Email"></p>
-                <p><input class="w3-round-xlarge w3-input w3-border custom-input" type="text" placeholder="Message"
-                        required name="Message"></p>
-                <button type="submit" class="w3-round-xlarge w3-button w3-green w3-third" onclick="feedback()">Send
+                <button type="submit" class="w3-round-xlarge w3-button w3-green w3-third" [disabled]="!formdata.valid">Send
                     a Message</button>
             </form>
         </div>
         <br>
     </div>
-=======
->>>>>>> addb168342f58e30de663ad0bd3b87cc0fe6ff00
     <div id="aboutus" class="w3-half w3-grey ">
         <div class="w3-card w3-margin">
             <div class="w3-container w3-padding w3-light-grey">
@@ -214,10 +120,6 @@
         </div>
     </div>
 </div>
-<<<<<<< HEAD
-=======
-
->>>>>>> addb168342f58e30de663ad0bd3b87cc0fe6ff00
 <!-- Footer -->
 <footer id="myFooter">
     <div class="w3-cell-row w3-container w3-theme-l2 w3-padding-32">
@@ -228,31 +130,6 @@
         </div>
         <div class="w3-container w3-cell w3-mobile">
             <a [routerLink]="['/returns']">RETURNS & REFUNDS</a>
-<<<<<<< HEAD
-        </div>
-        <div class="w3-container w3-cell w3-mobile">
-            <a [routerLink]="['/privatepolicy']">PRIVATE POLICY</a>
-        </div>
-    </div>
-</footer>
-<script>
-    // Used to toggle the menu on small screens when clicking on the menu button
-    function myFunction() {
-        var x = document.getElementById("navDemo");
-        if (x.className.indexOf("w3-show") == -1) {
-            x.className += " w3-show";
-        } else {
-            x.className = x.className.replace(" w3-show", "");
-        }
-    }
-
-    function feedback() {
-
-    }
-
-    // When the user clicks anywhere outside of the modal, close it
-    var modal = document.getElementById('ticketModal');
-=======
         </div>
         <div class="w3-container w3-cell w3-mobile">
             <a [routerLink]="['/privatepolicy']">PRIVATE POLICY</a>
@@ -313,7 +190,6 @@
     }
 
     var modal = document.getElementById('easyRefundMoal');
->>>>>>> addb168342f58e30de663ad0bd3b87cc0fe6ff00
     window.onclick = function (event) {
         if (event.target == modal) {
             modal.style.display = "none";
