--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -36,7 +36,7 @@
   <div class="w3-col l2">
     <!-- About Card -->
     <div class="w3-card w3-margin w3-margin-top">
-      <a href="cosmetics.html">
+        <a [routerLink]="['/cosmetics']">
         <img src="../../assets/images/Cosmetics_Link.jpg" style="width: 100%" height="200" alt="cosmetics"></a>
       <div class="w3-container w3-white">
         <h4><b>Travel Cosmetics</b></h4>
