--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -4,28 +4,28 @@
 <div class="row">
   <div class="col-75">
     <div class="container">
-      <form action="continuetocheckout.html">
+      <form [formGroup]="paydata" (ngSubmit)="onClickSubmit(paydata.value)" action="continuetocheckout.html">
 
         <div class="row">
           <div class="col-50">
             <h3>Billing Address</h3>
-            <label for="fname"><i class="fa fa-user"></i> Full Name</label>
-            <input type="text" id="fname" name="firstname" placeholder="Enter your name">
-            <label for="email"><i class="fa fa-envelope"></i> Email</label>
-            <input type="text" id="email" name="email" placeholder="Enter your mail ID">
+            <label><i class="fa fa-user"></i> Full Name</label>
+            <input type="text" formControlName="fname" placeholder="Enter your name" required>
+            <label ><i class="fa fa-envelope"></i> Email</label>
+            <input type="text" formControlName="pemail"placeholder="Enter your mail ID"required>
             <label for="adr"><i class="fa fa-address-card-o"></i> Address </label>
-            <input type="text" id="adr" name="address" placeholder="Enter your address">
+            <input type="text" formControlName="address" id="adr" name="address" placeholder="Enter your address"required>
             <label for="city"><i class="fa fa-institution"></i> City</label>
-            <input type="text" id="city" name="city" placeholder="Enter your city">
+            <input type="text" formControlName="pcity"id="city" name="city" placeholder="Enter your city"required>
 
             <div class="row">
               <div class="col-50">
                 <label for="state">State</label>
-                <input type="text" id="state" name="state" placeholder="Enter your state">
+                <input type="text" formControlName="pstate"id="state" name="state" placeholder="Enter your state"required>
               </div>
               <div class="col-50">
                 <label for="zip">Postal Code</label>
-                <input type="text" id="zip" name="zip" placeholder="Postal Code">
+                <input type="text" formControlName="ppostalcode" id="zip" name="zip" placeholder="Postal Code"required>
               </div>
             </div>
           </div>
@@ -40,19 +40,19 @@
               <i class="fa fa-cc-discover" style="color:orange;"></i>
             </div>
             <label for="cname">Name on Card</label>
-            <input type="text" id="cname" name="cardname" placeholder="Enter the name on the card">
+            <input type="text" formControlName="nameoncard" id="cname" name="cardname" placeholder="Enter the name on the card"required>
             <label for="ccnum">Credit card number</label>
-            <input type="text" id="ccnum" name="cardnumber" placeholder="xxxx-xxxx-xxxx-xxxx">
+            <input type="text" formControlName="cccardno"id="ccnum" name="cardnumber" placeholder="xxxx-xxxx-xxxx-xxxx"required>
             <label for="expmonth">Exp Month</label>
-            <input type="text" id="expmonth" name="expmonth" placeholder="xx">
+            <input type="text" formControlName="expmonth"id="expmonth" name="expmonth" placeholder="xx"required>
             <div class="row">
               <div class="col-50">
                 <label for="expyear">Exp Year</label>
-                <input type="text" id="expyear" name="expyear" placeholder="xxxx">
+                <input type="text" formControlName="expyear"id="expyear" name="expyear" placeholder="xxxx"required>
               </div>
               <div class="col-50">
                 <label for="cvv">CVV</label>
-                <input type="text" id="cvv" name="cvv" placeholder="xxx">
+                <input type="text" formControlName="cvv" id="cvv" name="cvv" placeholder="xxx"required>
               </div>
             </div>
           </div>
@@ -65,7 +65,7 @@
           <input type="submit" (click)='buy()' value="Continue to checkout" class="btn">
         </div>
         <div *ngIf='!this.customerservice.userLoginInfo.userLogin'>
-          <input type="submit" onclick="document.getElementById('loginModal').style.display='block'"
+          <input type="submit" [disabled]="!paydata.valid" onclick="document.getElementById('loginModal').style.display='block'"
             value="Please Login to Check Out" class="btn">
         </div>
 
