--- a/src/app/purchase-success/purchase-success.component.html
+++ b/src/app/purchase-success/purchase-success.component.html
@@ -1,7 +1,7 @@
 <div class="w3-container">
   <div class="w3-center w3-main w3-card-4 w3-padding-64">
     <h3> Thanks For Purchasing with us! </h3>
-    <h4>Your can pay for your order during the delivery at {{address}}</h4>
+    <h4>Your order will be delivery at {{address}}</h4>
     <button class="w3-button w3-blue" (click)='navigateToDashboard()'> Take me to Dashboard</button>
   </div>
 </div>
