--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -28,7 +28,7 @@
              
       <!-- <div class="container" style="background-color:#f1f1f1"> -->
         
-        <span class="psw">Forgot <a href="passwordreset.html">Username/password?</a></span>
+        <span class="psw">Forgot <a [routerLink]="['/passwordreset']">Username/password?</a></span>
       <!-- </div> -->
     </div>
     <div *ngIf='loginState' class="w3-container">
