--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -95,7 +95,7 @@
     </div>
 </footer>
 
-<!-- Ticket Modal -->
+<!-- COD Modal -->
 <div id="ticketModal1" class="w3-modal">
     <div class="w3-modal-content w3-animate-top w3-card-4">
         <header class="w3-container w3-teal w3-center w3-padding">
@@ -116,7 +116,7 @@
         </div>
     </div>
 </div>
-
+<!-- Refund Modal -->
 <div id="easyRefundMoal" class="w3-modal">
     <div class="w3-modal-content w3-animate-top w3-card-4">
         <header class="w3-container w3-teal w3-center w3-padding">
