--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,42 +1,45 @@
+<!-- adding header to the page -->
 <header class="bgimg w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-top w3-center">
     <h2 class="w3-text-black ">Your Checklist</h2>
   </div>
   <hr class="cookware-header-line">
   <div class="w3-center w3-text-balck" style="width:100%;height:600px;">
-      <h4><b>It is Your Choice to Travel Smart...</b></h4>
+    <h4><b>It is Your Choice to Travel Smart...</b></h4>
 
   </div>
 </header>
+<!-- log in form -->
 <div class="w3-center">
   <h2>Login Form</h2>
 </div>
-
+<!-- validating data in the form -->
 <form [formGroup]="formdata" (ngSubmit)="onClickSubmit(formdata.value)" style="border:1px solid #ccc">
 
 
 
-    <div class="center w3-padding w3-center">
-      <label> <b>Email</b></label>
-      <input formControlName="email" type="text" placeholder="Enter your email address" required>
+  <div class="center w3-padding w3-center">
+    <label> <b>Email</b></label>
+    <input formControlName="email" type="text" placeholder="Enter your email address" required>
 
-      <label><b>Password</b></label>
-      <input formControlName="password" type="password" placeholder="Password" required>
-      <button type="button" class="w3-button w3-red"><a [routerLink]=''> Cancel </a></button>
-      <button type="submit" class="w3-button w3-green" [disabled]="!formdata.valid"> LogIn</button>
-      
-             
-      <!-- <div class="container" style="background-color:#f1f1f1"> -->
-        
-        <span class="psw">Forgot <a [routerLink]="['/passwordreset']">Username/password?</a></span>
-      <!-- </div> -->
-    </div>
-    <div *ngIf='loginState' class="w3-container">
-      <div class="w3-center">
-        <h1 class="w3-red"> Email id or password is incorrect!</h1>
-      </div>
-    
+    <label><b>Password</b></label>
+    <input formControlName="password" type="password" placeholder="Password" required>
+    <button type="button" class="w3-button w3-red"><a [routerLink]=''> Cancel </a></button>
+    <button type="submit" class="w3-button w3-green" [disabled]="!formdata.valid"> LogIn</button>
+
+
+    <!-- <div class="container" style="background-color:#f1f1f1"> -->
+
+    <span class="psw">Forgot <a [routerLink]="['/passwordreset']">Username/password?</a></span>
+    <!-- </div> -->
+  </div>
+  <!-- checking login status -->
+  <div *ngIf='loginState' class="w3-container">
+    <div class="w3-center">
+      <h1 class="w3-red"> Email id or password is incorrect!</h1>
     </div>
 
-    
+  </div>
+
+
 </form>
